# jetauto_ws

./: .display.sh  .expand_rootfs.sh  .gitignore  .jetautorc  .typerc  command  release
src/jetauto_app/: CMakeLists.txt  package.xml
src/jetauto_app/launch/: line_following.launch  object_tracking.launch  patrol.launch
src/jetauto_app/scripts/: ar_app.py  lidar.py  line_following.py  patrol.py  (+1 more)
src/jetauto_bringup/: package.xml
src/jetauto_calibration/: package.xml
src/jetauto_example/: package.xml
src/jetauto_interfaces/: CMakeLists.txt  package.xml
src/jetauto_multi/: package.xml
src/jetauto_peripherals/: package.xml
src/xf_mic_asr_offline/: CMakeLists.txt  setup.py
src/xf_mic_asr_offline/config/: call.bnf
src/xf_mic_asr_offline/include/: asr_offline_record_sample.h
src/xf_mic_asr_offline/launch/: mic_init.launch  startup_test.launch  voice_control_arm.launch  voice_control_color_detect.launch  voice_control_color_sorting.launch  voice_control_color_track.launch  voice_control_garbage_classification.launch  voice_control_move.launch  voice_control_navigation.launch  voice_control_navigation_transport.launch
src/xf_mic_asr_offline/scripts/: asr_node.py  awake_node.py  voice_control_arm.py  voice_control_color_detect.py  voice_control_color_sorting.py  voice_control_color_track.py  voice_control_garbage_classification.py  voice_control_move.py  voice_control_navigation.py  voice_control_navigation_transport.py
src/xf_mic_asr_offline/src/: call_recognition.cpp  voice_control.cpp
src/xf_mic_asr_offline/src/xf_mic_asr_offline/: voice_play.py
(+192 files in other folders)
